--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,19 +1,32 @@
-<!DOCTYPE html>
 <html lang="en">
 
-   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>{{appTitle}}</title>
-      <link rel="stylesheet" href="/stylesheets/style.css" />
-   </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>{{appTitle}}</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+  </head>
 
-   <body>
+  <body>
+    <nav class="layout-nav">
+      <div class="container-layout">
+        <a href="/">Home</a>
+      </div>
+      <div class="container-layout">
+        <a href="/library">library</a>
+      </div>
+      <div class="container-layout">
+        <a href="/Auth/signup">Sign up</a>
+      </div>
+      <div class="container-layout">
+        <a href="/Auth/login">Login</a>
+      </div>
+    </nav>
 
-      {{{body}}}
+    {{{body}}}
 
-      <script src="/js/script.js"></script>
-   </body>
+    <script src="/js/script.js"></script>
+  </body>
 
 </html>
