--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,6 +11,7 @@
   <body>
     <nav class="layout-nav">
       <div class="container-layout">
+        <img src="/images/house.png" alt="house" />
         <a href="/">Home</a>
       </div>
       <div class="container-layout">
@@ -21,6 +22,9 @@
       </div>
       <div class="container-layout">
         <a href="/Auth/login">Login</a>
+      </div>
+      <div class="container-layout">
+        <a href="/Auth/profile">Profile</a>
       </div>
     </nav>
 
