--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,9 +20,22 @@ h1 {
   justify-content: right;
   align-items: center;
 }
+.layout-nav a {
+  text-decoration: none;
+}
 .container-layout {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 30px;
+}
+.container-layout img {
+  width: 30px;
+  height: 30px;
+  background-size: cover;
+  margin: 0 20px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
