--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,13 +18,16 @@
         <a href="/library">library</a>
       </div>
       <div class="container-layout">
-        <a href="/Auth/signup">Sign up</a>
+        <a href="/auth/signup">Sign up</a>
       </div>
       <div class="container-layout">
-        <a href="/Auth/login">Login</a>
+        <a href="/auth/login">Login</a>
       </div>
       <div class="container-layout">
-        <a href="/Auth/profile">Profile</a>
+        <a href="/auth/profile">Profile</a>
+      </div>
+      <div class="container-layout">
+        <a href="/auth/private-library">Private Library</a>
       </div>
     </nav>
 
