--- a/views/Auth/signup.hbs
+++ b/views/Auth/signup.hbs
@@ -1,1 +1,27 @@
-Signup
+<h1>Signup</h1>
+
+<div>
+
+  <form action="/signup" method="post">
+    <input
+      type="username"
+      name="username"
+      value=""
+      required="true"
+      placeholder="Enter your username"
+    />
+    <input
+      type="password"
+      name="password"
+      value=""
+      required="true"
+      placeholder="******"
+    />
+
+    <input type="submit" value="Signup" />
+  </form>
+
+  <button>
+    <a href="/auth/login">Go to log in page</a>
+  </button>
+</div>
