finished sign up

--- a/views/Auth/signup.hbs
+++ b/views/Auth/signup.hbs
@@ -22,6 +22,6 @@
   </form>
 
   <button>
-    <a href="/auth/login">Go to log in page</a>
+    <a href="/login">Go to log in page</a>
   </button>
 </div>
