--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,16 +18,16 @@
         <a href="/library">library</a>
       </div>
       <div class="container-layout">
-        <a href="/auth/signup">Sign up</a>
+        <a href="/signup">Sign up</a>
       </div>
       <div class="container-layout">
-        <a href="/auth/login">Login</a>
+        <a href="/login">Login</a>
       </div>
       <div class="container-layout">
-        <a href="/auth/profile">Profile</a>
+        <a href="/profile">Profile</a>
       </div>
       <div class="container-layout">
-        <a href="/auth/private-library">Private Library</a>
+        <a href="/private-library">Private Library</a>
       </div>
     </nav>
 
