--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,6 +29,9 @@
       <div class="container-layout">
         <a href="/private-library">Private Library</a>
       </div>
+      <div class="container-layout">
+        <a href="/admin">Settings</a>
+      </div>
     </nav>
 
     {{{body}}}
