--- a/views/Auth/login.hbs
+++ b/views/Auth/login.hbs
@@ -1,1 +1,14 @@
-login
+<h1>Log in</h1>
+
+<div>
+  <form action="/login" method="post">
+    <input
+      type="username"
+      name="username"
+      value=""
+      placeholder="Enter your username"
+    />
+    <input type="password" name="password" value="" placeholder="******" />
+    <input type="submit" value="Log in" />
+  </form>
+</div>
