added background image

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -39,6 +39,10 @@
         <a href="/login">Login</a>
       </div>
 
+      <div class="container-layout">
+        <button href="/logout">Logout</button>
+      </div>
+
     </nav>
 
     {{{body}}}
