--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>{{appTitle}}</title>
+    <title>Nasa Library</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
@@ -40,7 +40,7 @@
       </div>
 
       <div class="container-layout">
-        <button href="/logout">Logout</button>
+        <a href="/logout">Logout</a>
       </div>
 
     </nav>
