working on private library

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,7 +30,7 @@
       </div>
 
       <div class="container-layout">
-        <a href="/library">library</a>
+        <a href="/library">Library</a>
       </div>
       <div class="container-layout">
         <a href="/signup">Sign up</a>
