added create new image

--- a/views/private-page/new-space-image.hbs
+++ b/views/private-page/new-space-image.hbs
@@ -6,7 +6,7 @@
     <input type="text" name="description" />
   </label>
   <label>
-    Image Space Url:
+    Image Url:
     <input type="text" name="image" />
   </label>
   <div>
