--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,6 +24,9 @@
             <a href="/private-library">Private Library</a>
           </div>
           <div class="container-layout">
+            <a href="/private/create">create new image</a>
+          </div>
+          <div class="container-layout">
             <a href="/admin">Settings</a>
           </div>
         </div>
