started edit an image

--- a/views/library.hbs
+++ b/views/library.hbs
@@ -4,6 +4,7 @@
     <div>
       <img class="img-day" src="{{links.0.href}}" alt="Picture of the day" />
       <h1>{{data.0.title}}</h1>
+      <a href="/library/{{_id}}">See more</a>
     </div>
   {{/each}}
 </div>
