--- a/views/private-page/private-library.hbs
+++ b/views/private-page/private-library.hbs
@@ -3,11 +3,11 @@
 {{#each allImages}}
   <h1>{{name}}</h1>
   {{#if image}}
-    <a href="/private/{{_id}}">
+    <a href="/private-library/{{_id}}">
       <img src="{{image}}" alt={{title}} />
     </a>
   {{/if}}
   <p>{{description}}</p>
-  <a href="/private/{{_id}}">See more</a>
+  <a href="/private-library/{{_id}}">See more</a>
 
 {{/each}}
