--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <h1>Hello Spacelover!</h1>
 <h2> Picture Of the day</h2>
 <img class="img-day" src="{{url}}" alt="Picture of the day" />
-
+<!--because we destructured pictureOftheDay, we don't have to write it each times-->
 {{title}}
 {{date}}
 {{explanation}}
