--- a/views/private-page/new-space-image.hbs
+++ b/views/private-page/new-space-image.hbs
@@ -1,6 +1,6 @@
 <form action="/private/create" method="post">
-  <label>Title:
-    <input type="text" name="title" />
+  <label>Name:
+    <input type="text" name="name" />
   </label>
   <label>Description:
     <input type="text" name="description" />
