added delete route and hbs

--- a/views/private-page/Image-detail.hbs
+++ b/views/private-page/Image-detail.hbs
@@ -15,7 +15,7 @@
 <div>
   <a href="/private-library/edit/{{imageData._id}}">edit movie</a>
   <div>
-    <form action="/private-library/{{imageData._id}}/delete" method="post">
+    <form action="/private-library/delete/{{imageData._id}}" method="post">
       <button type="submit">Delete</button>
     </form>
   </div>
