--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,12 +13,15 @@
     </div>
   </div>
 </div>
+
 <br />
 <br />
+
 <div class="background-container">
   <h2> Nasa Library</h2>
   <a href="/Library">See more</a>
-  <div class="flex-container">
+
+  <div class="grid-container">
     {{#each randomLibrary}}
       <img class="img-day" src="{{links.0.href}}" alt="Picture of the day" />
     {{/each}}
