--- a/views/private-page/private-library.hbs
+++ b/views/private-page/private-library.hbs
@@ -1,13 +1,18 @@
-<h1>This is your private Library</h1>
+<div class="background-container">
+  <h1>This is your private Library</h1>
+  <div class="flex-container">
 
-{{#each allImages}}
-  <h1>{{name}}</h1>
-  {{#if image}}
-    <a href="/private-library/{{_id}}">
-      <img src="{{image}}" alt={{title}} />
-    </a>
-  {{/if}}
-  <p>{{description}}</p>
-  <a href="/private-library/{{_id}}">See more</a>
+    {{#each allImages}}
+      <h1>{{name}}</h1>
+      {{#if image}}
+        <a href="/private-library/{{_id}}">
+          <img src="{{image}}" alt={{title}} />
+        </a>
+      {{/if}}
+      <p>{{description}}</p>
+      <a href="/private-library/{{_id}}">See more</a>
 
-{{/each}}
+    {{/each}}
+
+  </div>
+</div>
