--- a/views/library.hbs
+++ b/views/library.hbs
@@ -1,10 +1,16 @@
-<h1>Library</h1>
-<div>
-  {{#each randomLibrary}}
-    <div>
-      <img class="img-day" src="{{links.0.href}}" alt="Picture of the day" />
-      <h1>{{data.0.title}}</h1>
-      <a href="/library/{{_id}}">See more</a>
-    </div>
-  {{/each}}
+<div class="background-container">
+  <h1>Library</h1>
+  <div class="grid-container">
+    {{#each randomLibrary}}
+      <div>
+        <a href="/library/{{data.0.nasa_id}}"><img
+            class="img-day"
+            src="{{links.0.href}}"
+            alt="Picture of the day"
+          /></a>
+        <h1>{{data.0.title}}</h1>
+        <a href="/library/{{data.0.nasa_id}}">See more</a>
+      </div>
+    {{/each}}
+  </div>
 </div>
