--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,9 +34,18 @@
             </div></div>
         </div>
 
-        <div class="container-layout">
-          <a href="/library">Library</a>
+        <div class="dropdown">
+          <button class="dropbtn">Gallery</button>
+          <div class="dropdown-content">
+            <div class="container-layout">
+              <a href="/library">Library</a>
+            </div>
+            <div class="container-layout">
+              <a href="/gallery">Mars Rover Gallery</a>
+            </div>
+          </div>
         </div>
+
         <div class="container-layout">
           <a href="/signup">Sign up</a>
         </div>
