--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,15 +1,8 @@
-<div class="center-container">
-  <form class="search-form" action="/library/search" method="post">
-    <input type="text" placeholder="Search.." name="search" />
-    <button type="submit"></button>
-  </form>
-</div>
-
 <div class="background-container">
 
-  <h1>Nasa Image Library</h1>
+  <h1>Zour searched Items</h1>
   <div class="grid-container">
-    {{#each randomLibrary}}
+    {{#each searchedImages}}
       <div>
         <a href="/library/{{data.0.nasa_id}}"><img
             class="img-day"
