--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,6 +1,6 @@
 <div class="background-container">
 
-  <h1>Zour searched Items</h1>
+  <h1>Your search results for "{{keyword}}"</h1>
   <div class="grid-container">
     {{#each searchedImages}}
       <div>
