--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,7 +5,8 @@ body {
   color: white;
 }
 
-a {
+a,
+.dropdown span {
   color: white;
   font-size: 20px;
   text-decoration: none;
@@ -49,48 +50,31 @@ img {
   align-items: center;
   margin: 0 30px;
 }
-
-.dropbtn {
-  background-color: #000000;
-  color: white;
-  font-size: 16px;
-  border: none;
-}
-
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
   display: inline-block;
 }
-
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: black;
   min-width: 50px;
 }
-
-/* Links inside the dropdown */
 .dropdown-content a {
   color: white;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-}
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #000000;
+  text-align: left;
 }
 
-/* Show the dropdown menu on hover */
+.dropdown-content a:hover {
+  background-color: white;
+  color: #000000;
+}
+
 .dropdown:hover .dropdown-content {
   display: block;
-}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-  background-color: #000000;
 }
 
 .background-container {
