--- a/views/index.hbs
+++ b/views/index.hbs
@@ -40,28 +40,10 @@
 <br />
 
 <div class="background-container">
-  <h2> Mars Photo Gallery</h2>
+  <h2> Mars Curiosity Gallery</h2>
   <a href="/gallery">Go to Gallery</a>
   <div class="grid-container">
     {{#each marsPhotoData}}
-      <a href="/gallery/{{id}}"><img
-          class="img-day"
-          src="{{img_src}}"
-          loading="lazy"
-          alt="Mars Rover Image"
-        /></a>
-    {{/each}}
-  </div>
-</div>
-
-<br />
-<br />
-
-<div class="background-container">
-  <h2> Mars Rover</h2>
-  <a href="/gallery">Go to Gallery</a>
-  <div class="grid-container">
-    {{#each marsImageData}}
       <a href="/gallery/{{data.0.nasa_id}}"><img
           class="img-day"
           src="{{links.0.href}}"
