--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,7 +14,7 @@
     <div class="text-container">
       <h2>{{title}}</h2>
       <h3>Date: {{date}}</h3>
-      <p>{{explanation}}</p>
+      <p class="img-description">{{explanation}}</p>
     </div>
   </div>
 </div>
