--- a/views/nasaImage-detail.hbs
+++ b/views/nasaImage-detail.hbs
@@ -1,15 +1,17 @@
-<h2>{{imageData.data.0.title}}</h2>
-
-<div>
-  {{#if imageData.links.0.href}}
-
-    <img src="{{imageData.links.0.href}}" alt={{imageData.data.0.title}} />
-
-  {{/if}}
+<div class="background-container">
+  <h2>{{imageData.data.0.title}}</h2>
 
   <div>
-    <h2><strong>Description</strong></h2>
-    <p>{{imageData.data.0.description}}</p>
-  </div>
+    {{#if imageData.links.0.href}}
 
+      <img src="{{imageData.links.0.href}}" alt={{imageData.data.0.title}} />
+
+    {{/if}}
+
+    <div>
+      <h2><strong>Description</strong></h2>
+      <p class="img-description">{{imageData.data.0.description}}</p>
+    </div>
+
+  </div>
 </div>
