added favorites form

--- a/views/gallery.hbs
+++ b/views/gallery.hbs
@@ -10,15 +10,18 @@
           /></a>
         <h1>{{data.0.title}}</h1>
         <a href="/gallery/{{data.0.nasa_id}}">See more</a>
-        <form action="/profile/add-favorite" method="post">
-          <button type="submit">save as favorite</button>
-          <input
-            type="text"
-            name="imageId"
-            value="{{data.0.nasa_id}}"
-            hidden="true"
-          />
-        </form>
+        <!-- ../ reach variable outside of #each-->
+        {{#if ../isLoggedIn}}
+          <form action="/profile/add-favorite" method="post">
+            <button type="submit">Save as favorite</button>
+            <input
+              type="text"
+              name="imageId"
+              value="{{data.0.nasa_id}}"
+              hidden="true"
+            />
+          </form>
+        {{/if}}
       </div>
     {{/each}}
   </div>
