added route so favorites

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,6 +30,7 @@
             <div class="dropdown-content">
               <a href="/profile">Profile</a>
               <a href="/private-library">Private Library</a>
+              <a href="/favorites">Favorites</a>
               <a href="/private/create">create new image</a>
               <a href="/admin">Settings</a>
             </div>
