added moon and sun page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,6 +2,9 @@
 
 <div class="background-container">
   <h2> Picture Of the day</h2>
+  <h4>Discover the cosmos! Each day a different image or photograph of our
+    fascinating universe is featured, along with a brief explanation written by
+    a professional astronomer.</h4>
   <div class="flex-container">
     <div class="center-container">
       <img
@@ -23,7 +26,7 @@
 <br />
 
 <div class="background-container">
-  <h2> Nasa Library</h2>
+  <h2> NASA Image Library</h2>
   <a href="/Library">Go to Library</a>
   <div class="grid-container">
     {{#each randomLibrary}}
