--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,8 +20,11 @@
         <div class="dropdown container-layout">
           <span>Gallery</span>
           <div class="dropdown-content">
-            <a href="/library">Library</a>
+            <a href="/library">Nasa Image Library</a>
+            <a href="/The-Sun">The Sun</a>
+            <a href="/The-Moon">The Moon</a>
             <a href="/gallery">Mars Rover Gallery</a>
+
           </div>
         </div>
         {{#if isLoggedIn}}
