routes for specific image

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -44,10 +44,10 @@
 
 <div class="background-container">
   <h2> Mars Curiosity Gallery</h2>
-  <a href="/gallery">Go to Gallery</a>
+  <a href="/curiosity">Go to Gallery</a>
   <div class="grid-container">
     {{#each marsPhotoData}}
-      <a href="/gallery/{{data.0.nasa_id}}"><img
+      <a href="/curiosity/{{data.0.nasa_id}}"><img
           class="img-day"
           src="{{links.0.href}}"
           loading="lazy"
