--- a/views/curiosity.hbs
+++ b/views/curiosity.hbs
@@ -1,15 +1,15 @@
 <div class="background-container">
-  <h1>Mars Curiosity Gallery</h1>
+  <h1>Mars Curiosity Images</h1>
   <div class="grid-container">
     {{#each marsPhotoData}}
       <div>
-        <a href="/gallery/{{data.0.nasa_id}}"><img
+        <a href="/curiosity/{{data.0.nasa_id}}"><img
             class="img-day"
             src="{{links.0.href}}"
             alt="Mars Rover Image"
           /></a>
         <h1>{{data.0.title}}</h1>
-        <a href="/gallery/{{data.0.nasa_id}}">See more</a>
+        <a href="/curiosity/{{data.0.nasa_id}}">See more</a>
         <!-- ../ reach variable outside of #each-->
         {{#if ../isLoggedIn}}
           <form action="/favorites" method="post">
