--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,7 +23,7 @@
             <a href="/library">Nasa Image Library</a>
             <a href="/The-Sun">The Sun</a>
             <a href="/The-Moon">The Moon</a>
-            <a href="/gallery">Mars Rover Gallery</a>
+            <a href="/curiosity">Mars Rover</a>
 
           </div>
         </div>
